[build-system]
requires = [
	"flit_core >=3.8,<4",
	"snakeoil ~=0.10.5",
]
build-backend = "py_build"
backend-path = ["."]

[project]
name = "pkgdev"
description = "collection of tools for Gentoo development"
readme = "README.rst"
license = {file = "LICENSE"}
requires-python = "~=3.10"
authors = [
	{name = "Tim Harder", email = "radhermit@gmail.com"},
	{name = "Arthur Zamarin", email = "arthurzam@gentoo.org"},
]
maintainers = [
	{name = "Arthur Zamarin", email = "arthurzam@gentoo.org"},
]
classifiers = [
	"License :: OSI Approved :: BSD License",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
]
dynamic = ["version"]

dependencies = [
	"snakeoil~=0.10.5",
	"pkgcore~=0.12.23",
	"pkgcheck~=0.10.25",
]

[project.optional-dependencies]
test = [
	"pytest>=6.0",
	"pytest-cov",
]
doc = [
	"sphinx",
	"tomli; python_version < '3.11'"
]
tatt = [
	"nattka",
	"Jinja2",
]

[project.urls]
Homepage = "https://github.com/pkgcore/pkgdev"
Documentation = "https://pkgcore.github.io/pkgdev/"
Source = "https://github.com/pkgcore/pkgdev"

[project.scripts]
pkgdev = "pkgdev.scripts.__init__:main"

[tool.flit.external-data]
directory = "data"

[tool.flit.sdist]
include = [
	"Makefile", "py_build.py",
	"NEWS.rst", "doc", "tests",
	"build/sphinx/man/*.1",
]
exclude = [
	".github/", ".gitignore",
	"doc/api/", "doc/generated/", "doc/_build/",
]

[tool.black]
line-length = 100

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-vv -ra -l"
testpaths = ["tests"]
